--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hbs": "^3.1.0",
     "i18n": "^0.5.0",
     "morgan": "~1.6.1",
+    "multer": "^1.0.3",
     "serve-favicon": "~2.3.0",
     "when": "^3.7.3"
   },
